<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="netology">Netology</string>
    <string name="content_text" translatable="false">🤖 12 апреля стартует бесплатный курс «Искусственный интеллект: создайте свою первую нейросеть»

Благодаря машинному обучению нам доступны чудеса вроде распознавания лиц, написания песен в стиле Курта Кобейна и картин в духе Рембрандта. Создать свою собственную нейросеть реально — и не только для опытных дата-сайентистов. Вы тоже можете попробовать.

На курсе вы узнаете, как устроены нейросети и в каких сферах они применяются, а также самостоятельно обучите до 4-х математических моделей. Мир Data Science и искусственного интеллекта — доступнее, чем кажется.

Убедитесь в этом сами → <a href="https://netolo.gy/h3m">https://netolo.gy/h3m</a></string>
    <string name="authorName" translatable="false">Нетология. Меняем карьеру через образование</string>
    <string name="postDate" translatable="false">4 апр в 10:31</string>
    <string name="countViews" translatable="false">1000</string>
    <string name="countLikes" translatable="false">1000</string>
    <string name="countReposts" translatable="false">1000</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text...</string>
    <string name="description_post_save">Save...</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message">Edit message</string>
    <string name="description_edit_cancel">Cancel</string>
    <string name="views">Views</string>
    <string name="likes">Likes</string>
    <string name="reposts">Reposts</string>
</resources>