<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/netology"
        android:padding="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_netology_logo_48dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/authorName"
        app:layout_constraintBottom_toTopOf="@+id/postDate"
        app:layout_constraintEnd_toStartOf="@+id/options"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/postDate"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@+id/authorName"
        app:layout_constraintTop_toBottomOf="@+id/authorName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="false"
        android:contentDescription="@string/options"
        app:icon="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_spacing"
        app:constraint_referenced_ids="avatar, postDate, options" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mainContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/content_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/videoContent"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:padding="@dimen/maximal_spacing"
        app:layout_constraintTop_toBottomOf="@+id/mainContent"
        app:srcCompat="@drawable/ic_youtube_logo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonPlayVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/videoContent"
        app:layout_constraintStart_toStartOf="@+id/videoContent"
        app:layout_constraintEnd_toEndOf="@+id/videoContent"
        app:layout_constraintTop_toTopOf="@+id/videoContent"
        app:layout_constraintVertical_bias="0.423"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="videoContent,buttonPlayVideo" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_spacing"
        app:constraint_referenced_ids="mainContent,videoContent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/iconViews"
        style="@style/Widget.AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="false"
        android:contentDescription="@string/views"
        app:icon="@drawable/ic_views_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footerBarrier"
        tools:text="10K" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLikes"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/likes"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footerBarrier"
        tools:text="10K" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonReposts"
        style="@style/Widget.AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:contentDescription="@string/reposts"
        app:icon="@drawable/ic_reposts_24dp"
        app:layout_constraintStart_toEndOf="@id/buttonLikes"
        app:layout_constraintTop_toBottomOf="@id/footerBarrier"
        tools:text="10K" />

</androidx.constraintlayout.widget.ConstraintLayout>